# CPP07_QT_Les08_Hw01

./: CMakeLists.txt  readme.md
headers/: about.h  database.h  dialog.h  mainwindow.h
resource/: resource.qrc
source/: about.cpp  database.cpp  dbdata.cpp  dialog.cpp  dialog.ui  mainwindow.cpp  mainwindow.ui
